added Activity_details.java added Activity_details.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_create_alarm">CreateAlarm</string>
+    <string name="title_activity_activity_details">activity_details</string>
 </resources>
