--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_create_alarm">CreateAlarm</string>
     <string name="title_activity_activity_details">activity_details</string>
+    <string name="setAlarm">Set Alarm</string>
+    <string name="cancelAlarm">Cancel Alarm</string>
 </resources>
