--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="onButton">On</string>
     <string name="createalarm">Create Alarm</string>
     <string name="title_activity_alarm">AlarmActivity</string>
+    <string name="IntroText">Click here to get Started</string>
 </resources>
