--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="createalarm">Create Alarm</string>
     <string name="title_activity_alarm">AlarmActivity</string>
     <string name="IntroText">Click here to get Started</string>
+    <string name="medName">Medication Name</string>
 </resources>
