--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="checkBox_Friday">F</string>
     <string name="checkBox_Saturday">Sa</string>
     <string name="setTime">Set Time</string>
+    <string name="alarmTimeUnset">Alarm time is unset.</string>
 </resources>
