--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="setEndDate">Select End Date</string>
     <string name="repeatSelectorText">Repeat: </string>
     <string name="weeklySelectorText">Repeat on: </string>
+    <string name="title_activity_alarm_group">Create Your Alarm</string>
 </resources>
