--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="repeatSelectorText">Repeat: </string>
     <string name="weeklySelectorText">Repeat on: </string>
     <string name="title_activity_alarm_group">Create Your Alarm</string>
+    <string name="name">Name</string>
 </resources>
