--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,9 @@
     <string name="weeklySelectorText">Repeat on: </string>
     <string name="title_activity_alarm_group">Create Your Alarm</string>
     <string name="name">Name</string>
+
+    <string name="title_activity_full_screen_alarm">FullScreenAlarm</string>
+    <string name="alarm_stop_button">Stop</string>
+    <string name="alarm_snooze_button">Snooze</string>
+    <string name="Pill">Pill</string>
 </resources>
