--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="alarm_stop_button">Stop</string>
     <string name="alarm_snooze_button">Snooze</string>
     <string name="Pill">Pill</string>
+    <string name="save">SAVE</string>
 </resources>
