Working on Cardviews

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,8 @@
     <string name="alarm_snooze_button">Snooze</string>
     <string name="Pill">Pill</string>
     <string name="save">SAVE</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enabled">ENABLED</string>
 </resources>
