--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="enabled">ENABLED</string>
+    <string name="alarmGroupName">Alarm Group Name</string>
+    <string name="alarmGroupType">Alarm Group Type</string>
 </resources>
