Finished the alarm sound stuff android.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="deleteAlarm">Delete Alarm</string>
     <string name="expand">Expand</string>
     <string name="title_activity_edit__daily__alarm">Edit Daily Alarm</string>
+    <string name="ringtoneplaybutton">Play</string>
 </resources>
