--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,11 +45,11 @@
     <string name="title_activity_alarm_group">Create Your Alarm</string>
     <string name="name">Name</string>
     <string-array name="alarm_types">
-        <item>Select One</item>
+        <!--<item>Select One</item>-->
         <item>Daily</item>
-        <item>Weekly</item>
-        <item>Intervals</item>
-        <item>Only Once</item>
+        <!--<item>Weekly</item>-->
+        <!--<item>Intervals</item>-->
+        <!--<item>Only Once</item>-->
     </string-array>
     <string name="alarmType">Alarm Type</string>
 
